# ru_projects

./: README.md  tsam_project_1
agdd_inspector_casper/: .gitignore  (+1 more)
forc_assignment_2/: CMakeLists.txt  README.md  README.txt  high_scores.txt  main.cpp  words.txt
forc_assignment_2/Classes/: game_handler.cpp  game_handler.h  word.cpp  word.h
forc_assignment_2/Helpers/: display_handler.cpp  display_handler.h  file_handler.cpp  file_handler.h  general_helpers.cpp  general_helpers.h
forc_assignment_2/Structs/: player.cpp  player.h
forc_assignment_3/: .gitignore  CMakeLists.txt  README.md  README.txt  binary_test.txt  cancer.cmpr  cancer.txt  copy_skel.sh  dance_with_me_baby.txt  example_huffman_encoded_file_01.txt  gump.cmpr  lol.cmpr  main.cpp  multi_tree_test.txt  new_and_refreshed_thing.txt  test.txt  yes.txt  yes2.cmpr  yes_new_2.cmpr  yex.cmpr
forc_assignment_3/Classes/: Compressor.cpp  Compressor.h  Data.cpp  Data.h  Decompressor.cpp  Decompressor.h  HuffmanDecoder.cpp  HuffmanDecoder.h  HuffmanEncoder.cpp  HuffmanEncoder.h  Node.cpp  Node.h
forc_assignment_3/Helpers/: FileHandler.cpp  FileHandler.h  HelperFunctions.cpp  HelperFunctions.h
forc_assignment_3/LectureCode/: main.cpp  trees.cpp  trees.h
forc_assignment_3/tests/PA3_huffman_compiled_tests/PA3_vA/: encoder_linux  encoder_mac
forc_assignment_3/tests/trees/: text_file_01_enc.txt  text_file_01_out.txt  text_file_02_enc.txt  text_file_02_org.txt  text_file_03_enc.txt  text_file_03_org.txt
forc_assignment_4/: CMakeLists.txt  README.md  README.txt  copy_skel.sh  main.cpp
forc_assignment_4/Classes/: IndividualCreator.cpp  IndividualCreator.h  TemplateCreator.cpp  TemplateCreator.h
forc_assignment_4/Helpers/: DataHandler.h  FileHandler.cpp  FileHandler.h  HelperFunctions.cpp  HelperFunctions.h  InputHandler.cpp  InputHandler.h
forc_assignment_4/Models/: Being.cpp  Being.h  Creature.cpp  Creature.h  EldritchHorror.cpp  EldritchHorror.h  Investigator.cpp  Investigator.h  Person.cpp  Person.h
forc_assignment_4/Resources/: db.txt  template_file.txt
forc_assignment_4/Saves/: yes.txt
forc_assignment_4/Saves/backups/: roster_backup.txt
forc_assignment_4/Templates/: BaseTemplate.cpp  BaseTemplate.h  Role.cpp  Role.h  Species.cpp  Species.h
(+4112 files in other folders)
