cmake_minimum_required(VERSION 3.17)
project(FORC_PA_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(FORC_PA_2 main.cpp Classes/word.h Classes/word.cpp Classes/word.h Classes/word.cpp Helpers/file_handler.h Helpers/file_handler.cpp Classes/game_handler.h Classes/game_handler.cpp Classes/game_handler.cpp Classes/game_handler.h Helpers/display_handler.cpp Helpers/display_handler.h Helpers/general_helpers.cpp Helpers/general_helpers.h Structs/player.cpp Structs/player.h)